dixing overflow issue in blog card

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,3 +22,17 @@
     color: #7c0fb3;
   }
 }
+
+.blog-title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.blog-description {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
